_sass/layout/_main.scss
.main-content {
    @include flex-col;
    @include align-center;
    .page-section {
        margin-bottom: $page-element-spacing;
        width: 900px;
        @include justify-start;
        img {
            max-width: 900px;
        }
        h2 {
            margin-left: -20px;
        }
    }
    .page-section.narrow {
        width: 600px;
    }
}

@media screen and (max-width: 900px) {
    .main-content {
        .page-section {
            width: 90%;
            img {
                max-width: 100%;
            }
        }
        .page-section.narrow {
            width: 90%;
        }
    }
}

body {
    display: grid;
    grid-template-columns: auto;
    grid-template-rows: 50px 1fr 110px;
}

